--- a/src/templates/menu.hbs
+++ b/src/templates/menu.hbs
@@ -1,21 +1,21 @@
 <li class='menu__item'>
   <article class='card'>
-    <img src='{{this.image}}' alt='{{this.description}}' class='card__image' />
+    <img src='{{image}}' alt='{{name}}' class='card__image' />
     <div class='card__content'>
-      <h2 class='card__name'>{{this.name}}</h2>
+      <h2 class='card__name'>{{name}}</h2>
       <p class='card__price'>
         <i class='material-icons'> monetization_on </i>
-        {{this.price}}
+        {{price}}
       </p>
       <p class='card__descr'>
-        {{this.description}}
+        {{description}}
       </p>
       <ul class='tag-list'>
-        {{!-- {{#each this}} --}}
-        <li class='tag-list__item'>
-          {{this.ingredients}}
-        </li>
-        {{!-- {{/each}} --}}
+        {{#each ingredients}}
+          <li class='tag-list__item'>
+            {{this}}
+          </li>
+        {{/each}}
       </ul>
     </div>
     <button class='card__button button'>
